tests/NormalTests/paczka1/small_fuzzy/88017039.err
Error in line 8: 556ZNc S266 82,0
Error in line 9: DB5rtADTLH S15 77,0
